--- a/edit.html
+++ b/edit.html
@@ -5,17 +5,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Notes</title>
-  <link rel="stylesheet" href="/css/edit.css">
-  <script src="/js/edit.js" defer></script>
+  <link rel="stylesheet" href="./css/edit.css">
+  <script src="./js/edit.js" defer></script>
 </head>
 
 <body>
   <header class="header">
     <button class="header__button" id="back-button">
-      <img src="/img/arrow_back.png" alt="Arrow back" class="header__img">
+      <img src="./img/arrow_back.png" alt="Arrow back" class="header__img">
     </button>
     <button class="header__button" id="delete-button">
-      <img src="/img/delete.png" alt="Delete" class="header__img">
+      <img src="./img/delete.png" alt="Delete" class="header__img">
     </button>
   </header>
   <main class="main">
