--- a/edit.html
+++ b/edit.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Notes</title>
   <link rel="stylesheet" href="./css/edit.css">
-  <script src="./js/edit.js" defer></script>
+  <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
 </head>
 
 <body>
@@ -24,6 +24,7 @@
       <textarea class="main__content-input" placeholder="Content" id="content"></textarea>
     </form>
   </main>
+  <script src="./js/edit.js"></script>
 </body>
 
 </html>
