--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <link rel="stylesheet" href="./css/index.css">
   <link rel="manifest" href="./manifest.json">
   <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
-  <script src="./js/index.js" defer></script>
 
   <!-- IOS Support -->
   <link rel="apple-touch-icon" href="./img/icons/apple-icon-180.png">
@@ -105,6 +104,7 @@
       <img src="./img/add.png" alt="Add" class="container__img">
     </button>
   </div>
+  <script src="./js/index.js"></script>
 </body>
 
 </html>
