--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Notes</title>
   <link rel="stylesheet" href="./css/index.css">
-  <link rel="manifest" href="./manifest.json">
+  <link rel="manifest" href="./manifest.webmanifest">
   <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
 
   <!-- IOS Support -->
   <link rel="apple-touch-icon" href="./img/icons/apple-icon-180.png">
-  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="mobile-web-app-capable" content="yes">
   <meta name="theme-color" content="#c0c1ff">
   <link rel="apple-touch-startup-image" href="./img/icons/apple-splash-2048-2732.jpg"
     media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)">
